try to fix syntax

--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -113,7 +113,7 @@ jobs:
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
       ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
       ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-
+    
     steps:
       - name: Set dynamic variables
         id: vars
@@ -148,4 +148,80 @@ jobs:
             {
                 "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
                 "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-                "tenantId": "${{ secrets
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+            }
+
+      - name: Create TF State dependencies
+        uses: azure/cli@v2
+        env:
+          ENVIRONMENT_PREFIX: ${{ vars.ENVIRONMENT_PREFIX }}
+          CIP_ENVIRONMENT: ${{ vars.CIP_ENVIRONMENT }}
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az group create --name s186${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --output none --tags "Environment=${CIP_ENVIRONMENT}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
+            az storage account create --name s186${ENVIRONMENT_PREFIX}cltfstate --resource-group s186${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --sku Standard_LRS
+            az storage container create --name tfstate --account-name s186${ENVIRONMENT_PREFIX}cltfstate
+
+      - name: 'Terraform Init'
+        id: terraform_init
+        working-directory: ./src/infrastructure/terraform
+        env:
+          ENVIRONMENT_PREFIX: ${{ vars.ENVIRONMENT_PREFIX }}
+        run: terraform init -backend-config="resource_group_name=s186${ENVIRONMENT_PREFIX}-cl-tfstate" -backend-config="storage_account_name=s186${ENVIRONMENT_PREFIX}cltfstate" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate"
+
+      - name: 'Terraform Plan'
+        id: terraform_plan
+        working-directory: ./src/infrastructure/terraform
+        run: terraform plan -out plan.plan
+        env:
+          TF_VAR_aspnetcore_environment: ${{ env.ENV_NAME }}
+          TF_VAR_environment_prefix: ${{ vars.ENVIRONMENT_PREFIX }}
+          TF_VAR_cip_environment: ${{ vars.CIP_ENVIRONMENT }}
+          TF_VAR_contentful_delivery_api_key: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
+          TF_VAR_contentful_preview_api_key: ${{ secrets.CONTENTFUL_PREVIEW_API_KEY }}
+          TF_VAR_contentful_management_api_key: ${{ secrets.CONTENTFUL_MANAGEMENT_TOKEN }}
+          TF_VAR_contentful_space_id: ${{ secrets.CONTENTFUL_SPACE_ID }}
+          TF_VAR_contentful_environment: ${{ vars.CONTENTFUL_ENVIRONMENT }}
+          TF_VAR_contentful_use_preview_api: ${{ vars.CONTENTFUL_PREVIEW }}
+          TF_VAR_caching_type: ${{ vars.CACHING_TYPE }}
+          TF_VAR_scripts_clarity: ${{ vars.SCRIPTS_CLARITY }}
+          TF_VAR_custom_domain: ${{ vars.CUSTOM_DOMAIN }}
+          TF_VAR_azure_translation_document_endpoint: ${{ vars.AZURE_TRANSLATION_DOCUMENT_ENDPOINT }}
+          TF_VAR_azure_translation_access_key: ${{ secrets.AZURE_TRANSLATION_ACCESS_KEY }}
+          TF_VAR_azure_frontdoor_scale: ${{ vars.AZURE_FRONTDOOR_SCALE }}
+          TF_VAR_pdf_generation_api_key: ${{ secrets.PDF_GENERATION_API_KEY }}
+          TF_VAR_pdf_generation_use_sandbox: ${{ vars.PDF_GENERATION_USE_SANDBOX }}
+          TF_VAR_rebrand: ${{ vars.REBRAND }}
+          TF_VAR_support_alert_email: ${{ secrets.SUPPORT_ALERT_EMAIL }}
+
+      - name: 'Terraform Apply'
+        id: terraform_apply
+        working-directory: ./src/infrastructure/terraform
+        run: terraform apply plan.plan
+
+      - name: Lowercase the repo name and username
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service
+          slot-name: 'staging'
+          images: 'ghcr.io/${{ env.REPO }}:${{ needs.package.outputs.image_tag }}'
+
+      - name: Swap slot to production
+        run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
+
+      - name: Delete staging slot
+        run: az webapp deployment slot delete --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging
+
+      - name: Clear Cache
+        id: clear-cache
+        uses: fjogeleit/http-request-action@v1
+        if: ${{ steps.vars.outputs.clear_cache == 'True' }}
+        with:
+          url: 'https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f'
+          method: 'POST'
