--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -26,11 +26,11 @@ on:
           - 'True'
           - 'False'
 
-run-name: Deploy to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
+run-name: ${{ github.event_name == 'push' && 'Build & Deploy to Test' || format('Deploy to {0}', github.event_name == 'release' && 'Production' || github.event.inputs.environment) }}
 
 jobs:
   validate_web:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'release'
     name: Validate Web
     uses: ./.github/workflows/validate-web.yaml
 
@@ -55,8 +55,8 @@ jobs:
   package:
     name: 'Package Web in Docker'
     runs-on: ubuntu-latest
-    needs: [ tag_release ]
-    if: always() && (needs.tag_release.result == 'success' || github.event_name != 'push')
+    needs: [ validate_web, tag_release ]
+    if: always() && (needs.tag_release.result == 'success' || (github.event_name == 'release' && needs.validate_web.result == 'success') || github.event_name == 'workflow_dispatch')
     defaults:
       run:
         working-directory: ./src
@@ -113,7 +113,7 @@ jobs:
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
       ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
       ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-
+    
     steps:
       - name: Set dynamic variables
         id: vars
@@ -154,17 +154,22 @@ jobs:
 
       - name: Create TF State dependencies
         uses: azure/cli@v2
+        env:
+          ENVIRONMENT_PREFIX: ${{ vars.ENVIRONMENT_PREFIX }}
+          CIP_ENVIRONMENT: ${{ vars.CIP_ENVIRONMENT }}
         with:
           azcliversion: latest
           inlineScript: |
-            az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
-            az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
-            az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
+            az group create --name s186${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --output none --tags "Environment=${CIP_ENVIRONMENT}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
+            az storage account create --name s186${ENVIRONMENT_PREFIX}cltfstate --resource-group s186${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --sku Standard_LRS
+            az storage container create --name tfstate --account-name s186${ENVIRONMENT_PREFIX}cltfstate
 
       - name: 'Terraform Init'
         id: terraform_init
         working-directory: ./src/infrastructure/terraform
-        run: terraform init -backend-config="resource_group_name=s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate" -backend-config="storage_account_name=s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate"
+        env:
+          ENVIRONMENT_PREFIX: ${{ vars.ENVIRONMENT_PREFIX }}
+        run: terraform init -backend-config="resource_group_name=s186${ENVIRONMENT_PREFIX}-cl-tfstate" -backend-config="storage_account_name=s186${ENVIRONMENT_PREFIX}cltfstate" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate"
 
       - name: 'Terraform Plan'
         id: terraform_plan
