--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -35,7 +35,6 @@ jobs:
     uses: ./.github/workflows/validate-web.yaml
 
   tag_release:
-    if: github.event_name == 'push'
     name: Create New Tag
     runs-on: ubuntu-latest
     needs: [ validate_web ]
@@ -43,10 +42,12 @@ jobs:
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
     steps:
       - uses: actions/checkout@v4
+        if: github.event_name == 'push'
         with:
           fetch-depth: 0
       - name: Bump version and push tag
         id: tag_version
+        if: github.event_name == 'push'
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -56,7 +57,10 @@ jobs:
     name: 'Package Web in Docker'
     runs-on: ubuntu-latest
     needs: [ validate_web, tag_release ]
-    if: always() && (needs.tag_release.result == 'success' || (github.event_name == 'release' && needs.validate_web.result == 'success') || github.event_name == 'workflow_dispatch')
+    if: always() && (github.event_name == 'push' && needs.tag_release.result == 'success') ||
+      (github.event_name == 'release' && needs.validate_web.result == 'success') ||
+      (github.event_name == 'workflow_dispatch' && needs.validate_web.result == 'success')
+
     defaults:
       run:
         working-directory: ./src
