--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -57,7 +57,8 @@ jobs:
     name: 'Package Web in Docker'
     runs-on: ubuntu-latest
     needs: [ validate_web, tag_release ]
-    if: always() && (github.event_name == 'push' && needs.tag_release.result == 'success') ||
+    if: always() &&
+      (github.event_name == 'push' && needs.tag_release.result == 'success') ||
       (github.event_name == 'release' && needs.validate_web.result == 'success') ||
       (github.event_name == 'workflow_dispatch' && needs.validate_web.result == 'success')
 
