--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -30,7 +30,7 @@ run-name: ${{ github.event_name == 'push' && 'Build & Deploy to Test' || format(
 
 jobs:
   validate_web:
-    if: github.event_name == 'push' || github.event_name == 'release'
+    if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     name: Validate Web
     uses: ./.github/workflows/validate-web.yaml
 
@@ -108,6 +108,7 @@ jobs:
     name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
     runs-on: ubuntu-latest
     needs: [ package ]
+    if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       id-token: write
