--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -77,6 +77,7 @@ jobs:
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
+      # Set docker image tag based on event type - release tag, new tag from push, or commit SHA for manual run
       - name: Set Docker image tag
         id: set_tag
         run: |
