Add `GetToAnAnswer` content type, controller, renderer, and associated assets

--- a/src/web/CareLeavers.Web/CareLeavers.Web.csproj
+++ b/src/web/CareLeavers.Web/CareLeavers.Web.csproj
@@ -43,4 +43,9 @@
         <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.NewtonsoftJson" Version="2.3.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <AdditionalFiles Include="Views\GetToAnAnswer\EmbeddedGetToAnAnswer.cshtml" />
+      <AdditionalFiles Include="Views\Shared\_IFrameLayout.cshtml" />
+    </ItemGroup>
+
 </Project>
