--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -88,5 +88,8 @@
       "sha256-EHM+nPamQPBwYVIwtgQKUmGfjqij8qTZMegp1TOVicU="
     ],
     "ReportOnly": false
+  },
+  "GetToAnAnswer": {
+    "QuestionnaireUrl": "" 
   }
 }
