CARE-1421 CARE-1665 Added GetToAnAnswer frontend proxy client so translation can be performed on the html
- Added a robust set of playwright automation tests to the Care Leavers project to test the iframe pages render correctly and the questionnaire routing/branching/priorities works, start page (with decorative image) and external links redirecting the whole page. but couldn't test results pages because the care leavers questionnaire flow doesn't include results pages.
- Some of these tests will have to be disables in the pipeline because the care leavers questionnaire flow doesn't have a start page defined via GTAA, etc.

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -64,7 +64,8 @@
     "AllowFrameUrls": [
       "*.googletagmanager.com",
       "app.contentful.com",
-      "*.riddle.com"
+      "*.riddle.com",
+      "'self'"
     ],
     "AllowImageUrls": [
       "cdn.openshareweb.com",
