CTH-19 - Prepare workflow and terraform fro new environmet

--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -5,26 +5,45 @@ on:
     branches:
       - main
   release:
-    types: [ published ]
+    types: [published]
   workflow_dispatch:
     inputs:
       environment:
         type: choice
-        description: 'Environment to deploy to'
+        description: "Environment to deploy to"
         required: true
-        default: 'Test'
+        default: "Test"
         options:
-          - 'Test'
-          - 'Staging'
-          - 'Production'
+          - "Test"
+          - "Staging"
+          - "Production"
+          - "elz-test"
       clear-cache:
         type: choice
-        description: 'Clear the cache?'
+        description: "Clear the cache?"
         required: true
-        default: 'False'
+        default: "False"
         options:
-          - 'True'
-          - 'False'
+          - "True"
+          - "False"
+      # service-id is only needed while testing migration and should be removed
+      service-id:
+        type: choice
+        description: "Service ID?"
+        required: true
+        default: "s186"
+        options:
+          - "s186"
+          - "s272"
+      # release-type is only needed while testing migration and should be removed
+      release-type:
+        type: choice
+        description: "Type of release"
+        required: true
+        default: "full"
+        options:
+          - "full"
+          - "infraplan"
 
 run-name: ${{ github.event_name == 'push' && 'Build & Deploy to Test' || format('Deploy to {0}', github.event_name == 'release' && 'Production' || github.event.inputs.environment) }}
 
@@ -35,9 +54,11 @@ jobs:
     uses: ./.github/workflows/validate-web.yaml
 
   tag_release:
+    #'if' only needed for migration testing
+    if: github.event.inputs.release-type == 'full'
     name: Create New Tag
     runs-on: ubuntu-latest
-    needs: [ validate_web ]
+    needs: [validate_web]
     outputs:
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
     steps:
@@ -54,9 +75,9 @@ jobs:
           release_branches: main
 
   package:
-    name: 'Package Web in Docker'
+    name: "Package Web in Docker"
     runs-on: ubuntu-latest
-    needs: [ validate_web, tag_release ]
+    needs: [validate_web, tag_release]
     if: always() &&
       (github.event_name == 'push' && needs.tag_release.result == 'success') ||
       (github.event_name == 'release' && needs.validate_web.result == 'success') ||
@@ -108,7 +129,7 @@ jobs:
   deploy_environment:
     name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
     runs-on: ubuntu-latest
-    needs: [ package ]
+    needs: [package]
     if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
@@ -120,7 +141,7 @@ jobs:
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
       ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
       ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-    
+
     steps:
       #Set dynamic variables based on deployment type - push to main, release or manual run
       - name: Set dynamic variables
@@ -149,7 +170,7 @@ jobs:
           terraform_wrapper: false
           terraform_version: 1.10.4
 
-      - name: 'Az CLI login'
+      - name: "Az CLI login"
         uses: azure/login@v2
         with:
           creds: |
@@ -163,23 +184,23 @@ jobs:
       - name: Create TF State dependencies
         uses: azure/cli@v2
         env:
-          ENVIRONMENT_PREFIX: ${{ vars.ENVIRONMENT_PREFIX }}
+          ENVIRONMENT_PREFIX: "${{steps.vars.outputs.service-id}}${{ vars.ENVIRONMENT_PREFIX }}"
           CIP_ENVIRONMENT: ${{ vars.CIP_ENVIRONMENT }}
         with:
           azcliversion: latest
           inlineScript: |
-            az group create --name s186${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --output none --tags "Environment=${CIP_ENVIRONMENT}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
-            az storage account create --name s186${ENVIRONMENT_PREFIX}cltfstate --resource-group s186${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --sku Standard_LRS --min-tls-version TLS1_2 --https-only true
-            az storage container create --name tfstate --account-name s186${ENVIRONMENT_PREFIX}cltfstate
+            az group create --name ${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --output none --tags "Environment=${CIP_ENVIRONMENT}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
+            az storage account create --name ${ENVIRONMENT_PREFIX}cltfstate --resource-group ${ENVIRONMENT_PREFIX}-cl-tfstate --location westeurope --sku Standard_LRS --min-tls-version TLS1_2 --https-only true
+            az storage container create --name tfstate --account-name ${ENVIRONMENT_PREFIX}cltfstate
 
-      - name: 'Terraform Init'
+      - name: "Terraform Init"
         id: terraform_init
         working-directory: ./src/infrastructure/terraform
         env:
-          ENVIRONMENT_PREFIX: ${{ vars.ENVIRONMENT_PREFIX }}
-        run: terraform init -backend-config="resource_group_name=s186${ENVIRONMENT_PREFIX}-cl-tfstate" -backend-config="storage_account_name=s186${ENVIRONMENT_PREFIX}cltfstate" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate"
+          ENVIRONMENT_PREFIX: "${{steps.vars.outputs.service-id}}${{ vars.ENVIRONMENT_PREFIX }}"
+        run: terraform init -backend-config="resource_group_name=${ENVIRONMENT_PREFIX}-cl-tfstate" -backend-config="storage_account_name=${ENVIRONMENT_PREFIX}cltfstate" -backend-config="container_name=tfstate" -backend-config="key=terraform.tfstate"
 
-      - name: 'Terraform Plan'
+      - name: "Terraform Plan"
         id: terraform_plan
         working-directory: ./src/infrastructure/terraform
         run: terraform plan -out plan.plan
@@ -205,7 +226,9 @@ jobs:
           TF_VAR_support_alert_email: ${{ secrets.SUPPORT_ALERT_EMAIL }}
           TF_VAR_gtaa_base_url: ${{ vars.GTAA_BASE_URL }}
 
-      - name: 'Terraform Apply'
+      - name: "Terraform Apply"
+        #'if' only needed for migration testing
+        if: github.event.inputs.release-type == 'full'
         id: terraform_apply
         working-directory: ./src/infrastructure/terraform
         run: terraform apply plan.plan
@@ -214,23 +237,35 @@ jobs:
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
       - name: Deploy to Azure Web App
+        #'if' only needed for migration testing
+        if: github.event.inputs.release-type == 'full'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
+        env:
+          ENVIRONMENT_PREFIX: "${{steps.vars.outputs.service-id}}${{vars.ENVIRONMENT_PREFIX}}"
         with:
-          app-name: s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service
-          slot-name: 'staging'
-          images: 'ghcr.io/${{ env.REPO }}:${{ needs.package.outputs.image_tag }}'
+          app-name: "${{env.ENVIRONMENT_PREFIX}}-cl-web-app-service"
+          slot-name: "staging"
+          images: "ghcr.io/${{ env.REPO }}:${{ needs.package.outputs.image_tag }}"
 
       - name: Swap slot to production
-        run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
+        #'if' only needed for migration testing
+        if: github.event.inputs.release-type == 'full'
+        env:
+          ENVIRONMENT_PREFIX: "${{steps.vars.outputs.service-id}}${{vars.ENVIRONMENT_PREFIX}}"
+        run: az webapp deployment slot swap --name ${{ env.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group ${{ env.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
 
       - name: Delete staging slot
-        run: az webapp deployment slot delete --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging
+        #'if' only needed for migration testing
+        if: github.event.inputs.release-type == 'full'
+        env:
+          ENVIRONMENT_PREFIX: "${{steps.vars.outputs.service-id}}${{vars.ENVIRONMENT_PREFIX}}"
+        run: az webapp deployment slot delete --name ${{ env.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group ${{ env.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging
 
       - name: Clear Cache
         id: clear-cache
         uses: fjogeleit/http-request-action@v1
         if: ${{ steps.vars.outputs.clear_cache == 'True' }}
         with:
-          url: 'https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f'
-          method: 'POST'
+          url: "https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f"
+          method: "POST"
