--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -49,7 +49,9 @@ run-name: ${{ github.event_name == 'push' && 'Build & Deploy to Test' || format(
 
 jobs:
   validate_web:
-    if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    #if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    #'if' only needed for migration testing
+    if: github.event.inputs.release-type == 'full'
     name: Validate Web
     uses: ./.github/workflows/validate-web.yaml
 
@@ -78,10 +80,12 @@ jobs:
     name: "Package Web in Docker"
     runs-on: ubuntu-latest
     needs: [validate_web, tag_release]
-    if: always() &&
-      (github.event_name == 'push' && needs.tag_release.result == 'success') ||
-      (github.event_name == 'release' && needs.validate_web.result == 'success') ||
-      (github.event_name == 'workflow_dispatch' && needs.validate_web.result == 'success')
+    #'if' only needed for migration testing
+    if: github.event.inputs.release-type == 'full'
+    # if: always() &&
+    #   (github.event_name == 'push' && needs.tag_release.result == 'success') ||
+    #   (github.event_name == 'release' && needs.validate_web.result == 'success') ||
+    #   (github.event_name == 'workflow_dispatch' && needs.validate_web.result == 'success')
 
     defaults:
       run:
@@ -130,7 +134,7 @@ jobs:
     name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
     runs-on: ubuntu-latest
     needs: [package]
-    if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    #if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       id-token: write
