--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -12,7 +12,7 @@ on:
         type: choice
         description: "Environment to deploy to"
         required: true
-        default: "Test"
+        default: "elz-test"
         options:
           - "Test"
           - "Staging"
@@ -196,6 +196,10 @@ jobs:
             az group create --name ${ENVIRONMENT_PREFIX}rg-uks-cl-tfstate --location uksouth --output none --tags "Environment=${CIP_ENVIRONMENT}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
             az storage account create --name ${ENVIRONMENT_PREFIX}cltfstate --resource-group ${ENVIRONMENT_PREFIX}rg-uks-cl-tfstate --location uksouth --sku Standard_LRS --min-tls-version TLS1_2 --https-only true
             az storage container create --name tfstate --account-name ${ENVIRONMENT_PREFIX}cltfstate
+
+      - name: Add Alert Mgmt Provider
+        run: |
+          az provider register --namespace Microsoft.AlertsManagement
 
       - name: "Terraform Init"
         id: terraform_init
