--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -18,6 +18,7 @@ on:
           - "Staging"
           - "Production"
           - "elz-test"
+          - "elz-staging"
       clear-cache:
         type: choice
         description: "Clear the cache?"
@@ -235,8 +236,6 @@ jobs:
           TF_VAR_gtaa_base_url: ${{ vars.GTAA_BASE_URL }}
 
       - name: "Terraform Apply"
-        #'if' only needed for migration testing
-        if: github.event.inputs.release-type == 'full'
         id: terraform_apply
         working-directory: ./src/infrastructure/terraform
         run: terraform apply plan.plan
