--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -19,6 +19,7 @@ on:
           - "Production"
           - "elz-test"
           - "elz-staging"
+          - "elz-production"
       clear-cache:
         type: choice
         description: "Clear the cache?"
@@ -236,6 +237,8 @@ jobs:
           TF_VAR_gtaa_base_url: ${{ vars.GTAA_BASE_URL }}
 
       - name: "Terraform Apply"
+        #'if' only needed for migration testing
+        if: github.event.inputs.release-type == 'full'
         id: terraform_apply
         working-directory: ./src/infrastructure/terraform
         run: terraform apply plan.plan
