CTH-19 Altering AI translator endpoints

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -36,10 +36,10 @@
     "ConnectionString": ""
   },
   "AzureTranslation": {
-    "Endpoint": "https://api.cognitive.microsofttranslator.com/",
-    "DocumentEndpoint": "",
+    "Endpoint": "https://uksouth.api.cognitive.microsoft.com/",
+    "DocumentEndpoint": "https://uksouth.api.cognitive.microsoft.com/",
     "AccessKey": "",
-    "Region": "westeurope"
+    "Region": "uksouth"
   },
   "Csp": {
     "AllowScriptUrls": [
