--- a/.github/workflows/validate-sonarcloud.yml
+++ b/.github/workflows/validate-sonarcloud.yml
@@ -8,28 +8,17 @@ on:
   workflow_dispatch:
 
 permissions:
-  pull-requests: read
+  pull-requests: write
 
 jobs:
   Analysis:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'zulu'
-
-      - name: Install SonarCloud scanners
-        run: dotnet tool install --global dotnet-sonarscanner
-
-      - name: Install SonarCloud coverage
-        run: dotnet tool install --global dotnet-coverage
 
       - name: Set Node.js 20.x
         uses: actions/setup-node@v4
@@ -45,6 +34,23 @@ jobs:
       - name: Run Gulp Dev
         working-directory: ./src/web/CareLeavers.Web
         run: gulp dev
+        
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "8.0.x"
+          
+      - name: Setup Java 21
+        uses: actions/setup-java@v5
+        with:
+          distribution: "microsoft"
+          java-version: 21
+
+      - name: Install dotnet coverage
+        run: dotnet tool install --global dotnet-coverage
+
+      - name: Install dotnet reportgenerator
+        run: dotnet tool install --global dotnet-reportgenerator-globaltool
 
       - name: Build, Test and Analyze
         working-directory: ./src
@@ -54,12 +60,13 @@ jobs:
           dotnet-sonarscanner begin \
             /k:DFE-Digital_care-leavers \
             /o:dfe-digital \
-            /d:sonar.qualitygate.wait=true \
-            /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml \
-            /d:sonar.coverage.exclusions=**/Program.cs,**/*.html,**/*.json,**/*.scss,**/wwwroot/** \
             /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
-            /d:sonar.dotnet.excludeTestProjects=true \
             /d:sonar.host.url="https://sonarcloud.io" \
+            /d:sonar.coverageReportPaths=CoverageReport/SonarQube.xml \
+            /d:sonar.coverage.exclusions="**/Program.cs,**/*.json" \
+            /d:sonar.cpd.exclusions="**/Program.cs" \
+            /d:sonar.issue.ignore.multicriteria.e1.ruleKey=csharpsquid:S6602 \
+            /d:sonar.scanner.skipJreProvisioning=true \
             /d:sonar.scanner.scanAll=false
           dotnet build --no-incremental
           dotnet-coverage collect --settings dotnet-cover-config.xml -f xml -o coverage.xml "dotnet test"
