CTH-19 Changing the endpoint for azure translator

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -36,7 +36,7 @@
     "ConnectionString": ""
   },
   "AzureTranslation": {
-    "Endpoint": "https://uksouth.api.cognitive.microsoft.com/",
+    "Endpoint": "https://api.cognitive.microsofttranslator.com/",
     "DocumentEndpoint": "https://uksouth.api.cognitive.microsoft.com/",
     "AccessKey": "",
     "Region": "uksouth"
