--- a/.github/workflows/validate-sonarcloud.yml
+++ b/.github/workflows/validate-sonarcloud.yml
@@ -20,7 +20,22 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: SonarQubeScan
-        uses: SonarSource/sonarqube-scan-action@v7
-        env: 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarScanner for .NET 10 with pull request decoration support
+        uses: highbyte/sonarscan-dotnet@v2.5.0
+        with:
+          # The key of the SonarQube project
+          sonarProjectKey: DFE-Digital_care-leavers
+          # The name of the SonarQube project
+          sonarProjectName:  care-leavers
+          # The name of the SonarQube organization in SonarCloud. For hosted SonarQube, skip this setting.
+          sonarOrganization: dfe-digital
+          # Optional command arguments to dotnet build
+          dotnetBuildArguments: ./src
+          # Optional command arguments to dotnet test
+          dotnetTestArguments: ./src --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+          # Optional extra command arguments the the SonarScanner 'begin' command
+          sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
+          
+    env:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
